--- a/goku.css
+++ b/goku.css
@@ -10,17 +10,21 @@
   box-shadow: 3px 3px 10px;
   text-align: center;
   border-radius: 5px;
-  margin: 0 auto;
+  margin: 10px auto;
   font-family: "Roboto", sans-serif;
+  padding: 0 0 20px 0;
+  background: url(bordes/goku.png);
 }
 
 .title{
   color: rgb(172, 32, 32);
+  font-size: x-large;
+  padding: 5px 0 0 0;
 }
 
 .texto{
   font-size: 15px;
-  padding: 10px;
+  padding: 10px 0 18px 0;
 }
 
 .boton{
@@ -29,13 +33,12 @@
   border: none;
   border-radius: 5px;
   color: white;
-  margin: 20px 0;
 }
 
 
 .spidy{
   display: block;
-  width: 250px;
+  width: 100%;
   border-radius: 5px 5px 0 0;
   margin: 10px auto;
   
